--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: husserl015
 description:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com
+avatar: https://avatars.githubusercontent.com/u/12967959?v=2
 
 pages_list:
   Archive: '/archive'
