--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ footer-links:
   email: 
   facebook: 
   flickr: 
-  github: lusserl015
+  github: husserl015
   instagram: 
   linkedin: 
   pinterest: 
