Revert "Update _config.yml"
This reverts commit 51aa8555cc02db29ed8477dedcbb87cfdb244535.

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ footer-links:
   email: 
   facebook: 
   flickr: 
-  github: husserl015
+  github: lusserl015
   instagram: 
   linkedin: 
   pinterest: 
